<resources>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>







    <string name="app_name">My time</string>

    <string name="menu_my_day">My day</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_info">Information</string>
</resources>
